# Elyze_backend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs  state.rs
src/routes/: candidates.rs  mod.rs  vote.rs
